<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/frmForm"

    android:background="@drawable/ic_background_welcome"
    >


        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/allura"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextSoDienThoaiWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/sodienthoai"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/sodienthoai"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             />

        <LinearLayout
            android:id="@+id/linearLayoutMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSoDienThoaiWelcome">

                <EditText
                    android:layout_weight="8"
                    android:id="@+id/editTextMatKhauWelcome"
                    android:layout_width="327dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/matkhau"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_pass"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />
                <ImageView
                    android:id="@+id/imageViewShowPassDangNhap"
                    android:src="@drawable/ic_showtext"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonDangNhapWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/dangnhap"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutMatKhau" />

        <TextView
            android:id="@+id/editTextOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aguafina_script"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="30sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDangNhapWelcome" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFaceBookWelcome"
            android:layout_width="386dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginTop="32dp"
            android:text="@string/facebook"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOr" />

        <Button
            android:id="@+id/buttonDangKiWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="32dp"
            android:background="@color/gray"
            android:text="@string/dangkingay"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFaceBookWelcome"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>